src/advParser.py
# Generated from adv.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class advParser ( Parser ):

    grammarFileName = "adv.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'.txt'", "'alphabet'", "'{'", 
                     "','", "'}'", "'-'", "'NFA'", "'<<<'", "'>>>'", "'complete'", 
                     "'DFA'", "'for'", "'in'", "'while'", "'do'", "'if'", 
                     "'else'", "'state'", "';'", "'['", "'='", "']'", "'transition'", 
                     "'->'", "'view'", "'of'", "'as'", "'--'", "'#label'", 
                     "'<'", "'>'", "'place'", "'at'", "'grid'", "'animation'", 
                     "'viewport'", "'++'", "'on'", "'show'", "'pause'", 
                     "'play'", "'+'", "'not'", "'*'", "'/'", "'%'", "'>='", 
                     "'<='", "'=='", "'!='", "'and'", "'or'", "'('", "')'", 
                     "'read'", "'[prompt='", "'{{'", "'}}'", "':'", "'number'", 
                     "'point'", "'list'", "'string'", "'boolean'", "'step'", 
                     "'margin'", "'color'", "'line'", "'initial'", "'accepting'", 
                     "'align'", "'slope'", "'highlighted'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Number", "ID", 
                      "SYMBOL", "STRING", "WS", "NEWLINE", "SingleLineComment", 
                      "BlockComment", "ERROR" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_importstat = 2
    RULE_alphabetDef = 3
    RULE_alphabetElement = 4
    RULE_automatonDef = 5
    RULE_automatonNFADef = 6
    RULE_automatonDFADef = 7
    RULE_automatonStat = 8
    RULE_automatonFor = 9
    RULE_automatonWhile = 10
    RULE_automatonIf = 11
    RULE_automatonElse = 12
    RULE_stateDef = 13
    RULE_propertiesDef = 14
    RULE_propertyElement = 15
    RULE_transitionDef = 16
    RULE_transitionElement = 17
    RULE_viewDef = 18
    RULE_viewStat = 19
    RULE_viewFor = 20
    RULE_viewWhile = 21
    RULE_viewIf = 22
    RULE_viewElse = 23
    RULE_transitionRedefine = 24
    RULE_transitionPoint = 25
    RULE_transitionLabelAlter = 26
    RULE_transitionLabelAlterWithComma = 27
    RULE_transition = 28
    RULE_placeDef = 29
    RULE_placeElement = 30
    RULE_gridDef = 31
    RULE_gridOptions = 32
    RULE_animationDef = 33
    RULE_viewportDef = 34
    RULE_viewportOn = 35
    RULE_viewportStat = 36
    RULE_viewportWhile = 37
    RULE_viewportIf = 38
    RULE_viewportElse = 39
    RULE_viewportFor = 40
    RULE_viewportInstructions = 41
    RULE_viewportInstructionsShowElement = 42
    RULE_playDef = 43
    RULE_decl = 44
    RULE_algebricOP = 45
    RULE_expr = 46
    RULE_assign = 47
    RULE_list = 48
    RULE_point = 49
    RULE_pointRect = 50
    RULE_pointPol = 51
    RULE_type = 52
    RULE_gridProperties = 53
    RULE_propertiesKeys = 54

    ruleNames =  [ "program", "stat", "importstat", "alphabetDef", "alphabetElement", 
                   "automatonDef", "automatonNFADef", "automatonDFADef", 
                   "automatonStat", "automatonFor", "automatonWhile", "automatonIf", 
                   "automatonElse", "stateDef", "propertiesDef", "propertyElement", 
                   "transitionDef", "transitionElement", "viewDef", "viewStat", 
                   "viewFor", "viewWhile", "viewIf", "viewElse", "transitionRedefine", 
                   "transitionPoint", "transitionLabelAlter", "transitionLabelAlterWithComma", 
                   "transition", "placeDef", "placeElement", "gridDef", 
                   "gridOptions", "animationDef", "viewportDef", "viewportOn", 
                   "viewportStat", "viewportWhile", "viewportIf", "viewportElse", 
                   "viewportFor", "viewportInstructions", "viewportInstructionsShowElement", 
                   "playDef", "decl", "algebricOP", "expr", "assign", "list", 
                   "point", "pointRect", "pointPol", "type", "gridProperties", 
                   "propertiesKeys" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    Number=75
    ID=76
    SYMBOL=77
    STRING=78
    WS=79
    NEWLINE=80
    SingleLineComment=81
    BlockComment=82
    ERROR=83

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alphabetDef(self):
            return self.getTypedRuleContext(advParser.AlphabetDefContext,0)


        def EOF(self):
            return self.getToken(advParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.StatContext)
            else:
                return self.getTypedRuleContext(advParser.StatContext,i)


        def getRuleIndex(self):
            return advParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = advParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.alphabetDef()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4466833103106) != 0):
                self.state = 111
                self.stat()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(advParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importstat(self):
            return self.getTypedRuleContext(advParser.ImportstatContext,0)


        def automatonDef(self):
            return self.getTypedRuleContext(advParser.AutomatonDefContext,0)


        def viewDef(self):
            return self.getTypedRuleContext(advParser.ViewDefContext,0)


        def animationDef(self):
            return self.getTypedRuleContext(advParser.AnimationDefContext,0)


        def playDef(self):
            return self.getTypedRuleContext(advParser.PlayDefContext,0)


        def getRuleIndex(self):
            return advParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = advParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 119
                self.importstat()
                pass
            elif token in [8, 11, 12]:
                self.state = 120
                self.automatonDef()
                pass
            elif token in [26]:
                self.state = 121
                self.viewDef()
                pass
            elif token in [36]:
                self.state = 122
                self.animationDef()
                pass
            elif token in [42]:
                self.state = 123
                self.playDef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(advParser.ID, 0)

        def getRuleIndex(self):
            return advParser.RULE_importstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportstat" ):
                listener.enterImportstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportstat" ):
                listener.exitImportstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportstat" ):
                return visitor.visitImportstat(self)
            else:
                return visitor.visitChildren(self)




    def importstat(self):

        localctx = advParser.ImportstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(advParser.T__0)
            self.state = 127
            self.match(advParser.ID)
            self.state = 128
            self.match(advParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlphabetDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alphabetElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.AlphabetElementContext)
            else:
                return self.getTypedRuleContext(advParser.AlphabetElementContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(advParser.ID)
            else:
                return self.getToken(advParser.ID, i)

        def getRuleIndex(self):
            return advParser.RULE_alphabetDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlphabetDef" ):
                listener.enterAlphabetDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlphabetDef" ):
                listener.exitAlphabetDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlphabetDef" ):
                return visitor.visitAlphabetDef(self)
            else:
                return visitor.visitChildren(self)




    def alphabetDef(self):

        localctx = advParser.AlphabetDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_alphabetDef)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(advParser.T__2)
                self.state = 131
                self.match(advParser.T__3)
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 132
                        self.alphabetElement()
                        self.state = 133
                        self.match(advParser.T__4) 
                    self.state = 139
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 140
                self.alphabetElement()
                self.state = 141
                self.match(advParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(advParser.T__2)
                self.state = 144
                self.match(advParser.ID)
                self.state = 145
                self.match(advParser.T__6)
                self.state = 146
                self.match(advParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlphabetElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(advParser.SYMBOL)
            else:
                return self.getToken(advParser.SYMBOL, i)

        def getRuleIndex(self):
            return advParser.RULE_alphabetElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlphabetElement" ):
                listener.enterAlphabetElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlphabetElement" ):
                listener.exitAlphabetElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlphabetElement" ):
                return visitor.visitAlphabetElement(self)
            else:
                return visitor.visitChildren(self)




    def alphabetElement(self):

        localctx = advParser.AlphabetElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_alphabetElement)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(advParser.SYMBOL)
                self.state = 150
                self.match(advParser.T__6)
                self.state = 151
                self.match(advParser.SYMBOL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(advParser.SYMBOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutomatonDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def automatonNFADef(self):
            return self.getTypedRuleContext(advParser.AutomatonNFADefContext,0)


        def automatonDFADef(self):
            return self.getTypedRuleContext(advParser.AutomatonDFADefContext,0)


        def getRuleIndex(self):
            return advParser.RULE_automatonDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutomatonDef" ):
                listener.enterAutomatonDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutomatonDef" ):
                listener.exitAutomatonDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutomatonDef" ):
                return visitor.visitAutomatonDef(self)
            else:
                return visitor.visitChildren(self)




    def automatonDef(self):

        localctx = advParser.AutomatonDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_automatonDef)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.automatonNFADef()
                pass
            elif token in [11, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.automatonDFADef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutomatonNFADefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(advParser.ID, 0)

        def transitionDef(self):
            return self.getTypedRuleContext(advParser.TransitionDefContext,0)


        def stateDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.StateDefContext)
            else:
                return self.getTypedRuleContext(advParser.StateDefContext,i)


        def automatonStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.AutomatonStatContext)
            else:
                return self.getTypedRuleContext(advParser.AutomatonStatContext,i)


        def getRuleIndex(self):
            return advParser.RULE_automatonNFADef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutomatonNFADef" ):
                listener.enterAutomatonNFADef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutomatonNFADef" ):
                listener.exitAutomatonNFADef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutomatonNFADef" ):
                return visitor.visitAutomatonNFADef(self)
            else:
                return visitor.visitChildren(self)




    def automatonNFADef(self):

        localctx = advParser.AutomatonNFADefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_automatonNFADef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(advParser.T__7)
            self.state = 160
            self.match(advParser.ID)
            self.state = 161
            self.match(advParser.T__8)
            self.state = 163 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 162
                    self.stateDef()

                else:
                    raise NoViableAltException(self)
                self.state = 165 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 168 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 167
                self.automatonStat()
                self.state = 170 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 13)) & ~0x3f) == 0 and ((1 << (_la - 13)) & -9214646312576745387) != 0)):
                    break

            self.state = 172
            self.transitionDef()
            self.state = 173
            self.match(advParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutomatonDFADefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.complete = None # Token

        def ID(self):
            return self.getToken(advParser.ID, 0)

        def transitionDef(self):
            return self.getTypedRuleContext(advParser.TransitionDefContext,0)


        def stateDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.StateDefContext)
            else:
                return self.getTypedRuleContext(advParser.StateDefContext,i)


        def automatonStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.AutomatonStatContext)
            else:
                return self.getTypedRuleContext(advParser.AutomatonStatContext,i)


        def getRuleIndex(self):
            return advParser.RULE_automatonDFADef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutomatonDFADef" ):
                listener.enterAutomatonDFADef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutomatonDFADef" ):
                listener.exitAutomatonDFADef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutomatonDFADef" ):
                return visitor.visitAutomatonDFADef(self)
            else:
                return visitor.visitChildren(self)




    def automatonDFADef(self):

        localctx = advParser.AutomatonDFADefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_automatonDFADef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 175
                localctx.complete = self.match(advParser.T__10)


            self.state = 178
            self.match(advParser.T__11)
            self.state = 179
            self.match(advParser.ID)
            self.state = 180
            self.match(advParser.T__8)
            self.state = 182 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 181
                    self.stateDef()

                else:
                    raise NoViableAltException(self)
                self.state = 184 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 187 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 186
                self.automatonStat()
                self.state = 189 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 13)) & ~0x3f) == 0 and ((1 << (_la - 13)) & -9214646312576745387) != 0)):
                    break

            self.state = 191
            self.transitionDef()
            self.state = 192
            self.match(advParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutomatonStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def automatonFor(self):
            return self.getTypedRuleContext(advParser.AutomatonForContext,0)


        def automatonIf(self):
            return self.getTypedRuleContext(advParser.AutomatonIfContext,0)


        def automatonWhile(self):
            return self.getTypedRuleContext(advParser.AutomatonWhileContext,0)


        def propertiesDef(self):
            return self.getTypedRuleContext(advParser.PropertiesDefContext,0)


        def algebricOP(self):
            return self.getTypedRuleContext(advParser.AlgebricOPContext,0)


        def getRuleIndex(self):
            return advParser.RULE_automatonStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutomatonStat" ):
                listener.enterAutomatonStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutomatonStat" ):
                listener.exitAutomatonStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutomatonStat" ):
                return visitor.visitAutomatonStat(self)
            else:
                return visitor.visitChildren(self)




    def automatonStat(self):

        localctx = advParser.AutomatonStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_automatonStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 194
                self.automatonFor()
                pass

            elif la_ == 2:
                self.state = 195
                self.automatonIf()
                pass

            elif la_ == 3:
                self.state = 196
                self.automatonWhile()
                pass

            elif la_ == 4:
                self.state = 197
                self.propertiesDef()
                pass

            elif la_ == 5:
                self.state = 198
                self.algebricOP()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutomatonForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(advParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(advParser.ExprContext,0)


        def automatonStat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(advParser.AutomatonStatContext)
            else:
                return self.getTypedRuleContext(advParser.AutomatonStatContext,i)


        def getRuleIndex(self):
            return advParser.RULE_automatonFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutomatonFor" ):
                listener.enterAutomatonFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutomatonFor" ):
                listener.exitAutomatonFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAutomatonFor" ):
                return visitor.visitAutomatonFor(self)
            else:
                return visitor.visitChildren(self)




    def automatonFor(self):

        localctx = advParser.AutomatonForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_automatonFor)
        self._la = 0 # Token type
        try:
            self.state = 219
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.match(advParser.T__12)
                self.state = 202
                self.match(advParser.ID)
                self.state = 203
                self.match(advParser.T__13)
                self.state = 204
                self.expr(0)
                self.state = 205
                self.automatonStat()
                pass
